--- a/views/user/user.html
+++ b/views/user/user.html
@@ -9,6 +9,7 @@
     <span class='col_fade'><%= user.follower_count %> 粉丝 </span>
     <span class='space'></span>
     <span class='col_fade'><%= user.following_count %> 关注 </span>
+	    <span> test </span>
   </div>
   <div>
 		<span>
